add jquery verlidation to chart

--- a/projects/chart/index.html
+++ b/projects/chart/index.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="js/jquery.validate-1.13.1.js"></script>
-	<script type="text/javascript" src="js/jquery.validate-1.13.1.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
@@ -41,10 +40,10 @@
 	<div class="main">
 		<div class="col_left left">
 			<div class="cGray">
-				<form action="#" id="demoForm">
+				<form action="get" id="demoForm">
 					<h3>Enter Login Detail</h3>
 					<fieldset>
-						<label for="uName">Username(This is your email address)</label>
+						<label for="username">Username(This is your email address)</label>
 						<input type="text" class="text" id="username" name="username" >
 					</fieldset>
 					<fieldset>
