--- a/projects/practice/Learning/Ajax learning/Ajax/index3.html
+++ b/projects/practice/Learning/Ajax learning/Ajax/index3.html
@@ -25,7 +25,7 @@ $(document).ready(function(){
 //     data.name=$("#name").val();
 //     data.city=$("#city").val();
 //     // console.log(data);
-//     $.post("js/demo_test_post.asp",data,function(){
+//     $.post("js/demo_test_post.asp",data,function(data,status){
 //       alert("数据：" + data + "\n状态：" + status);
 //     })
 //   })
