--- a/projects/practice/Learning/angular-learning/ui-bootstrap.html
+++ b/projects/practice/Learning/angular-learning/ui-bootstrap.html
@@ -1,16 +1,95 @@
 <!doctype html>
-<html ng-app="MyModule">
+<html ng-app="ngShowcaseApp">
   <head>
   <meta charset="utf-8">
   <title>ui-bootstrap</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <!-- 新 Bootstrap 核心 CSS 文件 -->
+  <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+  <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/angular.min.js"></script>
   <script type="text/javascript">
-      var myModule = angular.module("MyModule",[]);
+
+      // angular.module("ngShowcaseApp",[])
+      // .controller('ctrl.show.progress', function ($scope) {
+      //   var vm = $scope.vm = {};
+      //   vm.value = 50;
+      //   vm.style = 'progress-bar-info';
+      //   vm.showLabel = true;
+      // });
+
+
+      angular.module("ngShowcaseApp",[])
+      .controller('ctrl.input.file', function ($scope,$fileUploader) {
+        var vm = $scope.vm = {};
+        vm.uploader = $fileUploader.create({
+          scope:$scope,
+          url:'/api/upload',
+          autoUpload:true,
+          formData[{
+            key:'value'
+          }],
+          filters:[
+            function(){
+              console.info('filter1',item);
+              return true;
+            }
+          ]
+        })
+      });
+
+
   </script>
   </head>
   <body>
+
+<!--   <div ng-controller="ctrl.show.progress"> -->
+ <!--         <div ng-class="{progress: true, 'progress-striped': vm.striped}">
+           <div ng-class="['progress-bar', vm.style]" ng-style="{width: vm.value + '%'}">
+             <div ng-if="vm.showLabel">{{vm.value}}%</div>
+           </div>
+         </div>
+         <h3>选项</h3>
+         <label>进度：<input type="number" class="form-control" ng-model="vm.value"/></label>
+         <button class="btn btn-primary" ng-click="vm.value=0">0%</button>
+         <button class="btn btn-primary" ng-click="vm.value=20">20%</button>
+         <button class="btn btn-primary" ng-click="vm.value=60">60%</button>
+         <button class="btn btn-primary" ng-click="vm.value=100">100%</button>
+         <hr/>
+         <label>斑马纹<input type="checkbox" ng-model="vm.striped"/></label>
+         <label>文字<input type="checkbox" ng-model="vm.showLabel"/></label>
+         <hr/>
+         <label>风格：
+           <select ng-model="vm.style" class="form-control">
+             <option value="progress-bar-success">progress-bar-success</option>
+             <option value="progress-bar-info">progress-bar-info</option>
+             <option value="progress-bar-danger">progress-bar-danger</option>
+             <option value="progress-bar-warning">progress-bar-warning</option>
+           </select>
+         </label>  -->
+   <!--  </div>  -->  
+
+
+
+
+
+    <div ng-controller='ctrl.input.file'>
+      <div ng-show="vm.uploader.isHTMl5" class="row">
+          <div class="well col-md-6" ng-file-over>使用基础设定的拖放区</div>
+          <div class="well col-md-6" ng-file-drop"{ url: '/foo'}" ng-file-over="another-file-over-class">使用高级设定的拖放区</div>
+      </div>
       
+      <div class="row">
+        <div class="col-md-6">
+          单文件：<input ng-file-select type="file"/>
+        </div>
+        <div class="col-md-6">
+          多文件：<input ng-file-select type="file" multiple/><br/>
+        </div>
+      </div>  
+    </div>
+
+
+    
   </body>
 </html>
