--- a/projects/practice/Learning/canvas/stars.html
+++ b/projects/practice/Learning/canvas/stars.html
@@ -32,6 +32,16 @@
 				drawStar(ctx, r, r/2.0, x, y, a);
 			}
 			// drawStar(ctx, 120, 60, 400,400, 30);
+
+			ctx.width = 3;
+			ctx.strokeStyle = '#ccc';
+			ctx.fillStyle = 'yellow';
+			ctx.fill();
+			ctx.stroke();
+
+			drawMoon(ctx, 2, 600, 150, 80, 30);
+
+			drawLand();
 		}
 
 		// 绘制五角星
@@ -53,6 +63,32 @@
 			ctx.fill();
 			ctx.stroke();
 		}
+
+		// 绘制月亮的函数
+		function drawMoon(ctx,d,x,y,R,rot,fillColor){
+			ctx.save();
+			ctx.translate(x,y);
+			ctx.rotate(rot*Math.PI/180);
+			ctx.scale(R,R);
+			pathMoon(ctx,d);
+			ctx.fill();
+			ctx.restore();
+		}
+		function pathMoon(ctx,d){
+			ctx.beginPath();
+			// 绘制内弧
+			ctx.arc(0, 0, 1, 0.5*Math.PI, 1.5*Math.PI, true);
+			ctx.moveTo(0,-1);
+			// 绘制外弧
+			ctx.arcTo(d, 0, 0, 1, dis(0,-1,d,0) / d);
+			ctx.closePath();
+		}
+
+		// 两点间坐标距离公式
+		function dis(x1,y1,x2,y2){
+			return Math.sqrt((x1-x2)*(x1-x2) + (y1-y2)*(y1-y2));
+		}	
+
 	</script>
 </body>
 </html>
